# netgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build
src/: main.c
src/util/: net_utils.c  net_utils.h
